Added Avatar upload feature

--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -765,21 +765,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            10);
+		              10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                     
-		           0);
+		             0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1328,11 +1328,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            25);
+		              25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1723,13 +1723,14 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :  
+	filter: progid :    
 		                                                        
 		                                                        
 		                           
 		                           
 		                           
-		                  DXImageTransform.Microsoft.AlphaImageLoader (      
+		                    DXImageTransform.Microsoft.AlphaImageLoader ( 
+		      
 		              
 		 
 		   
@@ -1746,7 +1747,7 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                       src =       
+		                                         src =         
 		                                  
 		
 		 
@@ -1759,8 +1760,8 @@ p#clear {
 		                      
 		                      
 		                      
-		                 '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =           
+		                   '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =             
 		 
 		   
 		                
@@ -1776,7 +1777,7 @@ p#clear {
 		 
 		   
 		                                                               
-		                                             'scale' );
+		                                               'scale' );
 }
 
 .yui-picker-mask {
@@ -1951,11 +1952,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            25);
+		              25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2060,11 +2061,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            12);
+		              12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2180,11 +2181,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            12);
+		              12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2246,11 +2247,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                     
-		           0);
+		             0);
 }
 
 .yui-dt-resizerproxy {
@@ -2259,11 +2260,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                     
-		           0);
+		             0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2359,11 +2360,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            25);
+		              25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2750,21 +2751,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            50);
+		              50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            50);
+		              50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2862,11 +2863,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            50);
+		              50);
 }
 
 .yui-editor-container iframe {
@@ -3967,11 +3968,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            50);
+		              50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4738,11 +4739,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            12);
+		              12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5253,20 +5254,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                     
-		           0);
+		             0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            50);
+		              50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5354,11 +5355,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                    
+	filter: alpha(opacity =                      
 		                                                         
 		                                                         
 		                                                                   
-		              100);
+		                100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5614,21 +5615,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            50);
+		              50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            50);
+		              50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5726,11 +5727,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                     
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                    
-		            50);
+		              50);
 }
 
 .yui-editor-container iframe {
@@ -7784,11 +7785,11 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                                                 
+	filter: progid :                                                   
 		                                                        
 		                                   
 		                                   
-		            DXImageTransform.Microsoft.gradient (               
+		              DXImageTransform.Microsoft.gradient (                 
 		
 		 
 		    
@@ -7800,7 +7801,7 @@ a#asignup {
 		        
 		                 
 		                                                         
-		                                   startColorstr =        
+		                                     startColorstr =          
 		                             
 		 
 		   
@@ -7808,7 +7809,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		        "#0000FF", endColorstr =                        
+		          "#0000FF", endColorstr =                          
 		 
 		  
 		      
@@ -7817,7 +7818,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		                  "#19558D" );
+		                    "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8406,11 +8407,11 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                                    
+	filter: progid :                                      
 		                                                        
 		                                   
-		                                   DXImageTransform.Microsoft.gradient
-		(  
+		                                   
+		 DXImageTransform.Microsoft.gradient (    
 		
 		 
 		    
@@ -8424,14 +8425,14 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                      startColorstr =                         
+		                        startColorstr =                           
 		 
 		   
 		      
 		              
 		                            
 		                                                             
-		                    "#A7BBCC", endColorstr =    
+		                      "#A7BBCC", endColorstr =      
 		                               
 		 
 		   
@@ -8439,7 +8440,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		       "#879BAD" );
+		         "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -8981,8 +8982,11 @@ pre {
 
 .hidden {
 	visibility: hidden;
-	/*display: none;
-*/
+}
+
+.hide {
+	visibility: hidden;
+	display: none;
 }
 
 .white {
@@ -9891,7 +9895,7 @@ div.com_like a,a.c_like {
 	padding-right: 8px;
 }
 
-.btnfollow {
+.btnfollow,.slvrbtn {
 	display: inline-block;
 	cursor: pointer;
 	padding: 5px 9px 5px 9px;
@@ -10134,7 +10138,8 @@ table.user_stuff {
 	width: 100%;
 	height: 200px;
 	min-height: 100px;
-	padding: 10px; overflow : auto;
+	padding: 10px;
+	overflow: auto;
 	white-space: pre;
 	height: 90px;
 	background-color: #EEE;
@@ -10144,4 +10149,34 @@ table.user_stuff {
 td.ar {
 	text-aligh: right;
 	aligh: right;
+}
+
+div.profile_img,div.profile_img span {
+	vertical-align: top;
+}
+
+div.picture_change {
+	float: left;
+	margin-top: 4px;
+}
+
+a.change_image {
+	text-decoration: none !important;
+	color: #333;
+}
+
+.smaller {
+	font-size: smaller;
+}
+
+img.profile_pic {
+	margin-right: 20px;
+}
+
+.ml10 {
+	margin-left: 10px;
+}
+
+span.pic_upload {
+	display: none;
 }
