Added Avatar Upload feature, improved Profile editing

--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -7611,7 +7611,7 @@ legend {
 	font-weight: bold;
 }
 
-div.frm1,.excsl {
+div.frm1,.excsl, .login {
 	width: 500px;
 	margin-left: auto;
 	margin-right: auto;
