Added "Connect Facebook" and "Connect Twitter" to existing account. Improved logout script. Fixed IE-based bugs

--- a/www/style/1/www/_main.css
+++ b/www/style/1/www/_main.css
@@ -765,21 +765,21 @@ button,input[type="checkbox"],input[type="radio"],input[type="reset"],input[type
 	background: #000;
 	-moz-opacity: .10;
 	opacity: .10;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              10);
+		               10);
 	z-index: 9049;
 }
 
 .yui-skin-sam .yui-ac iframe {
 	opacity: 0;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                     
-		             0);
+		              0);
 	padding-right: .3em;
 	padding-bottom: .3em;
 }
@@ -1328,11 +1328,11 @@ p#clear {
 .yui-skin-sam .yui-calcontainer .yui-cal-nav-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              25);
+		               25);
 }
 
 .yui-skin-sam .yui-calcontainer .yui-cal-nav {
@@ -1723,13 +1723,13 @@ p#clear {
 
 * html .yui-picker-bg {
 	background-image: none;
-	filter: progid :    
+	filter: progid :     
 		                                                        
 		                                                        
 		                           
 		                           
 		                           
-		                    DXImageTransform.Microsoft.AlphaImageLoader ( 
+		                     DXImageTransform.Microsoft.AlphaImageLoader (  
 		      
 		              
 		 
@@ -1747,7 +1747,7 @@ p#clear {
 		 
 		    
 		                                                                   
-		                                         src =         
+		                                          src =          
 		                                  
 		
 		 
@@ -1760,8 +1760,8 @@ p#clear {
 		                      
 		                      
 		                      
-		                   '../../build/colorpicker/assets/picker_mask.png',
-		sizingMethod =             
+		                    '../../build/colorpicker/assets/picker_mask.png',
+		sizingMethod =              
 		 
 		   
 		                
@@ -1777,7 +1777,7 @@ p#clear {
 		 
 		   
 		                                                               
-		                                               'scale' );
+		                                                'scale' );
 }
 
 .yui-picker-mask {
@@ -1952,11 +1952,11 @@ p#clear {
 .yui-skin-sam .mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              25);
+		               25);
 }
 
 .yui-skin-sam .yui-panel-container {
@@ -2061,11 +2061,11 @@ p#clear {
 	_margin-left: -1px;
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              12);
+		               12);
 }
 
 .yui-skin-sam .yui-dialog .ft {
@@ -2181,11 +2181,11 @@ p#clear {
 
 .yui-skin-sam .yui-tt-shadow-visible {
 	opacity: .12;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              12);
+		               12);
 }
 
 .yui-skin-sam .yui-dt-mask {
@@ -2247,11 +2247,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	cursor: col-resize;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                     
-		             0);
+		              0);
 }
 
 .yui-dt-resizerproxy {
@@ -2260,11 +2260,11 @@ th.yui-dt-resizeable .yui-dt-resizerliner {
 	z-index: 9000;
 	background-color: #CCC;
 	opacity: 0;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                     
-		             0);
+		              0);
 }
 
 th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .yui-dt-resizer
@@ -2360,11 +2360,11 @@ th.yui-dt-hidden .yui-dt-liner,td.yui-dt-hidden .yui-dt-liner,th.yui-dt-hidden .
 .yui-skin-sam .yui-dt-mask {
 	background-color: #000;
 	opacity: .25;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              25);
+		               25);
 }
 
 .yui-skin-sam .yui-dt-message {
@@ -2751,21 +2751,21 @@ tbody .yui-dt-editable {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              50);
+		               50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              50);
+		               50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -2863,11 +2863,11 @@ tbody .yui-dt-editable {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              50);
+		               50);
 }
 
 .yui-editor-container iframe {
@@ -3968,11 +3968,11 @@ h2.yui-editor-skipheader,h3.yui-editor-skipheader {
 .yui-skin-sam .yui-crop .yui-crop-mask {
 	background-color: #000;
 	opacity: .5;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              50);
+		               50);
 }
 
 .yui-skin-sam .yui-crop .yui-resize {
@@ -4739,11 +4739,11 @@ body.yui-layout {
 .yui-skin-sam .yui-menu-shadow-visible {
 	background-color: #000;
 	opacity: .12;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              12);
+		               12);
 }
 
 .yui-skin-sam .yuimenuitem-selected {
@@ -5254,20 +5254,20 @@ body.yui-layout {
 .yui-resize-hover .yui-resize-handle,.yui-resize-hidden .yui-resize-handle
 	{
 	opacity: 0;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                     
-		             0);
+		              0);
 }
 
 .yui-resize-ghost {
 	opacity: .5;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              50);
+		               50);
 }
 
 .yui-resize-knob .yui-resize-handle {
@@ -5355,11 +5355,11 @@ body.yui-layout {
 
 .yui-skin-sam .yui-resize-hover .yui-resize-handle-active {
 	opacity: 1;
-	filter: alpha(opacity =                      
+	filter: alpha(opacity =                       
 		                                                         
 		                                                         
 		                                                                   
-		                100);
+		                 100);
 }
 
 .yui-skin-sam .yui-resize-proxy {
@@ -5615,21 +5615,21 @@ body.yui-layout {
 
 .yui-toolbar-container .yui-button-disabled .yui-toolbar-icon {
 	opacity: .5;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              50);
+		               50);
 }
 
 .yui-toolbar-container .yui-button-disabled .up,.yui-toolbar-container .yui-button-disabled .down
 	{
 	opacity: .5;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              50);
+		               50);
 }
 
 .yui-toolbar-container .yui-button a {
@@ -5727,11 +5727,11 @@ body.yui-layout {
 	top: 0;
 	left: 0;
 	opacity: .5;
-	filter: alpha(opacity =                       
+	filter: alpha(opacity =                        
 		                                                         
 		                                                         
 		                                                                    
-		              50);
+		               50);
 }
 
 .yui-editor-container iframe {
@@ -7611,7 +7611,7 @@ legend {
 	font-weight: bold;
 }
 
-div.frm1,.excsl, .login {
+div.frm1,.excsl,.login {
 	width: 500px;
 	margin-left: auto;
 	margin-right: auto;
@@ -7713,32 +7713,15 @@ div.uwelcome {
 	padding-bottom: 2px;
 }
 
-#toplogin td { /*border: 1px solid red;
-	*/
+#toplogin td { 
 	margin-left: 10px;
 	padding-right: 10px;
 }
 
-#loginHead { /*margin: 5px;
-	*/
+#loginHead { 
 	padding: 2px;
-	/*width: 400px;
-	position: relative;
-	float: left;
-	*/
 	color: #FFF;
 	font-weight: bold;
-	/*background-color: #505759;
-	background: #505759;
-	background-color: #F9F6E6;
-	min-height: 68px;
-	
-	 border-radius : 6px;
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
-	-opera-border-radius: 6px;
-	border-radius: 6px;
-*/
 }
 
 #loginHead a {
@@ -7785,11 +7768,11 @@ a#asignup {
 	background-color: #19558D;
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#0000FF', endColorstr='#19558D')";
-	filter: progid :                                                   
+	filter: progid :                                                    
 		                                                        
 		                                   
 		                                   
-		              DXImageTransform.Microsoft.gradient (                 
+		               DXImageTransform.Microsoft.gradient (                  
 		
 		 
 		    
@@ -7801,7 +7784,7 @@ a#asignup {
 		        
 		                 
 		                                                         
-		                                     startColorstr =          
+		                                      startColorstr =           
 		                             
 		 
 		   
@@ -7809,7 +7792,7 @@ a#asignup {
 		              
 		                            
 		                                                             
-		          "#0000FF", endColorstr =                          
+		           "#0000FF", endColorstr =                           
 		 
 		  
 		      
@@ -7818,7 +7801,7 @@ a#asignup {
 		 
 		      
 		                                                             
-		                    "#19558D" );
+		                     "#19558D" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#0000FF),
 		to(#19558D) );
 	background: -moz-linear-gradient(top, #0000FF, #19558D);
@@ -8407,11 +8390,11 @@ li.tsearch {
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
 	-ms-filter:
 		"progid:DXImageTransform.Microsoft.gradient(startColorstr='#A7BBCC', endColorstr='#879BAD')";
-	filter: progid :                                      
+	filter: progid :                                       
 		                                                        
 		                                   
 		                                   
-		 DXImageTransform.Microsoft.gradient (    
+		  DXImageTransform.Microsoft.gradient (     
 		
 		 
 		    
@@ -8425,14 +8408,14 @@ li.tsearch {
 		  
 		       
 		                                                         
-		                        startColorstr =                           
+		                         startColorstr =                            
 		 
 		   
 		      
 		              
 		                            
 		                                                             
-		                      "#A7BBCC", endColorstr =      
+		                       "#A7BBCC", endColorstr =       
 		                               
 		 
 		   
@@ -8440,7 +8423,7 @@ li.tsearch {
 		              
 		                             
 		                                                             
-		         "#879BAD" );
+		          "#879BAD" );
 	background: -webkit-gradient(linear, left top, left bottom, from(#A7BBCC),
 		to(#879BAD) );
 	background: -moz-linear-gradient(top, #A7BBCC, #879BAD);
@@ -9905,7 +9888,7 @@ div.com_like a,a.c_like {
 	min-width: 100px;
 }
 
-.btnfollow span {
+.btnfollow span,.btn_connect span {
 	vertical-align: middle;
 }
 
@@ -9918,6 +9901,29 @@ div.com_like a,a.c_like {
 	text-shadow: 0 1px #F0F0F0;
 	overflow: hidden;
 	vertical-align: middle;
+}
+
+.btn_connect {
+	background: url('/images/bg.png') repeat-x scroll 0 0;
+	border: 1px solid #808080 !important;
+	display: inline-block;
+	cursor: pointer;
+	font: 12px/15px Helvetica Neue, Arial;
+	font-weight: bold;
+	vertical-align: middle;
+	min-width: 100px;
+	cursor: pointer;
+	padding: 5px;
+}
+
+.btn_connect:hover {
+	background-position: 0 -1300px;
+	border-color: #7D98B8;
+}
+
+.btn_connect:active {
+	background-position: 0 -1700px;
+	border-color: #7D98B8;
 }
 
 div.follow {
@@ -9947,6 +9953,12 @@ div.follow:active,div.following:active {
 
 span.flabel {
 	padding-left: 4px;
+}
+
+span._bg_tw {
+	vertical-align: top;
+	padding-right: 6px;
+	margin-left: 6px;
 }
 
 #usrtags span {
